# bias-ext-posts

./: extension.json  pyproject.toml
bias_ext_posts/: __init__.py
bias_ext_posts/backend/: admin.py  admin_surface.py  apps.py  constants.py  content_models.py  events.py  ext.py  extenders.py  forum_contracts.py  frontend.py  handlers.py  listener_contracts.py  listeners.py  model_contracts.py  models.py  post_query_service.py  resources.py  runtime.py  schemas.py  search_contracts.py  search_targets.py  service_lifecycle.py  service_moderation.py  services.py  settings.py  tests.py  visibility.py
bias_ext_posts/backend/django_migrations/: 0001_initial.py  0002_initial.py  0003_postflag.py  0004_post_approval_status.py  0005_transfer_extension_owned_models_state.py  0006_remove_post_posts_discuss_49d427_idx_and_more.py  0007_drop_content_model_state.py
frontend/admin/: index.js
frontend/forum/: PostComposer.vue  index.js  postFrontendRegistry.js  postRuntime.js  sdk.d.ts  sdk.js
tests/: test_runtime_facade_imports.py
