[project]
name = "bias-ext-posts"
version = "0.1.0"
description = "Bias Posts Extension"
requires-python = ">=3.11"
dependencies = ["bias-core>=0.1,<0.2"]
[project.entry-points."bias.extensions"]
posts = "bias_ext_posts.backend.ext:extend"
[tool.setuptools.packages.find]
where = ["."]
include = ["bias_ext_posts*"]
