[project]
name = "bias-ext-posts"
version = "0.1.0"
description = "Bias Posts Extension"
requires-python = ">=3.11"
dependencies = [
  "bias-core>=0.1,<0.2",
  "bias-ext-users>=0.1,<0.2",
  "bias-content>=0.1,<0.2",
]

[project.entry-points."bias.extensions"]
posts = "bias_ext_posts.backend.ext:extend"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bias_ext_posts*"]

[tool.setuptools.data-files]
"bias_extensions/posts" = ["extension.json"]
"bias_extensions/posts/frontend/admin" = ["frontend/admin/index.js"]
"bias_extensions/posts/frontend/forum" = [
  "frontend/forum/PostComposer.vue",
  "frontend/forum/index.js",
  "frontend/forum/postFrontendRegistry.js",
  "frontend/forum/postRuntime.js",
  "frontend/forum/sdk.d.ts",
  "frontend/forum/sdk.js",
]

[tool.pytest."ini_options"]
"DJANGO_SETTINGS_MODULE" = "bias_core.extension_test_settings"
